test/sema/typeck/trait/generic-assoc-type-impl-matching-err.out
error: impl method does not match definition in trait.
--> generic-assoc-type-impl-matching-err.dora:19:5
 | 
 | impl Foo[Range] for Bar {
 |     fn foo(x: String): String { x }
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 | }
 | 
1 error found.
